adddition of clients webp images

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1760,6 +1760,7 @@ ul {
 .scroll-animationY {
   opacity: 0;
   transform: translateY(20px);
+  -webkit-font-smoothing: antialiased;
   transition: opacity 0.5s ease-in-out, transform 0.5s ease;
   /* animation:slideInFromBottom 3s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards; */
 }
