--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -2113,8 +2113,11 @@ ul {
 
 .scroll-animationTestimonials {
   opacity: 0;
+  -webkit-font-smoothing: antialiased;
   transform: translateY(20px);
   transition: opacity 0.5s ease-in-out, transform 0.5s ease;
+  will-change: opacity, transform; 
+  height: auto;
   animation: slideInFromBottom 3s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
 }
 
