--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1765,7 +1765,7 @@ ul {
   will-change: opacity, transform;
   height: auto;
   transition: opacity 0.5s ease-in-out, transform 0.5s ease;
-  /* animation:slideInFromBottom 3s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards; */
+  animation:slideInFromBottom 3s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
 }
 
 @keyframes slideInFromBottom {
