--- a/app/styles/mediaQuery.css
+++ b/app/styles/mediaQuery.css
@@ -133,7 +133,8 @@ a{
     justify-content: right;
     padding-left: 6%;
     font-size: 28px;
-    padding-top: 4%
+    padding-top: 4%;
+    visibility: hidden;
   }
 
   .bar {
@@ -237,12 +238,14 @@ a{
 
   .nav-list.MediaHidden {
     /* display:none; */
+    visibility: visible;
     -webkit-transform: translateX(1000px);
     transform: translateX(1000px);
     transition: 1.5s ease;
   }
 
   .nav-list.open {
+    visibility: visible;
     transform: translateX(0);
     background: black;
     transition: 1.5s ease;
