--- a/app/globals.css
+++ b/app/globals.css
@@ -33,3 +33,30 @@ body {
 img {
   image-rendering: auto;
 }
+.globalHome{
+  -moz-user-select: none;
+  -webkit-user-select: none;
+   -ms-user-select:none; 
+   user-select:none;
+   -o-user-select:none;
+   user-select: none !important;
+}
+
+* {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+}
+
+body {
+  -webkit-touch-callout: none;
+  -webkit-text-size-adjust: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+}
