footer section with mobile dev

--- a/app/styles/mediaQuery.css
+++ b/app/styles/mediaQuery.css
@@ -1198,4 +1198,47 @@ a{
   border-radius: 30px;
 }
 
+.veractDetailsLayout {
+  width: 100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footerContainer {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  flex-direction: column; 
+  text-align: left; 
+  gap: 1.25rem;
+  width: 75%;
+}
+
+.veractDetailsContainer {
+  width: 100%;
+}
+
+.socialMediaSection {
+  width: 100%;
+  display: flex;
+  gap: 1rem; 
+}
+
+.officeDetailsSection {
+  width: 100%;
+  gap: 0.25rem;
+}
+
+.contactNo {
+  display: flex;
+  gap: 0.5rem; 
+}
+
+.footerLogo {
+  width: 7.5rem;
+  height: 2.5rem;
+}
+
 }
