--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -347,7 +347,7 @@ span {
   }
 
   50% {
-    border-color: black;
+    border-color: var(--black-colour);
   }
 }
 
@@ -474,7 +474,7 @@ span {
 }
 
 .mainPage {
-  /* background-image: url("/images/blackBgNoMark.jpg"); */
+  /* background-image: url("/images/var(--black-colour)BgNoMark.jpg"); */
   background-image: url("/images/backgroundImg.jpg");
 }
 
@@ -489,7 +489,7 @@ span {
 
   /* background: linear-gradient(90deg, hsla(240, 94%, 51%, 1) 0%, hsla(0, 0%, 0%, 1) 100%); */
   /* background: linear-gradient(90deg, rgb(13, 13, 248) 0%, rgb(0, 0, 0) 100%) center center / cover no-repeat; */
-  /* background:black; */
+  /* background:var(--black-colour); */
   /* display: flex;
   align-items: center;
   justify-content: center; */
@@ -963,11 +963,11 @@ ul {
 }
 
 .servicesHeading {
-  color: var(--black-colour);
+  color: var(--var(--black-colour)-colour);
 }
 
 .servicesCardText {
-  color: var(--black-colour);
+  color: var(--var(--black-colour)-colour);
   font-size: var(--servicesInsideText);
   font-weight: var(--font-normal);
 }
@@ -1284,8 +1284,8 @@ ul {
 
 .portfolioFonts {
   color: var(--white-text-colour);
-  /* color:var(--black-colour); */
-  background: var(--black-colour);
+  /* color:var(--var(--black-colour)-colour); */
+  background: var(--var(--black-colour)-colour);
 }
 
 .contentWidth {
@@ -1413,7 +1413,7 @@ ul {
 }
 
 .verifyBox {
-  border: 2px solid var(--black-colour);
+  border: 2px solid var(--var(--black-colour)-colour);
   border-radius: 10px;
   width: 120%;
   height: 100%;
@@ -1452,7 +1452,7 @@ ul {
   bottom: 1%;
   /* width: 16%; */
   /* height: 75vh; */
-  background-color: var(--black-colour);
+  background-color: var(--var(--black-colour)-colour);
   border-radius: 20px;
   transition: all 0.3s ease;
 
@@ -1868,7 +1868,7 @@ ul {
 
 .manufacturingHover {
 
-  /* border: 1px solid var(--black-colour); */
+  /* border: 1px solid var(--var(--black-colour)-colour); */
   transition: all 0.5s ease;
   /* border-radius:10px; */
   /* padding:5%; */
@@ -1894,7 +1894,7 @@ ul {
 }
 
 .wellnessHover {
-  border: 1px solid var(--black-colour);
+  border: 1px solid var(--var(--black-colour)-colour);
   /* border-radius:10px; */
   /* padding:5%; */
 }
@@ -1920,7 +1920,7 @@ ul {
 
 .salesHover {
 
-  border: 1px solid var(--black-colour);
+  border: 1px solid var(--var(--black-colour)-colour);
   /* border-radius:10px; */
   /* padding:5%; */
 }
@@ -1946,7 +1946,7 @@ ul {
 
 .agriHover {
 
-  border: 1px solid var(--black-colour);
+  border: 1px solid var(--var(--black-colour)-colour);
   /* border-radius:10px; */
   /* padding:5%; */
 }
@@ -1973,7 +1973,7 @@ ul {
 
 .hrHover {
 
-  border: 1px solid var(--black-colour);
+  border: 1px solid var(--var(--black-colour)-colour);
   /* border-radius:10px; */
   /* padding:5%; */
 }
@@ -2019,7 +2019,7 @@ ul {
 }
 
 .fintechHover {
-  border: 2px solid var(--black-colour);
+  border: 2px solid var(--var(--black-colour)-colour);
   /* border-radius:10px; */
   /* padding:5%; */
 }
@@ -2312,3 +2312,64 @@ ul {
   box-shadow: inset 2px 3px 10px 3px rgba(0, 0, 0, 0.10);
 }
 
+.veractDetailsLayout {
+  width: 100%;
+  background-color: var(--black-colour);
+  display: flex;
+  justify-content: space-evenly;
+}
+.footerContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  font-family: inherit;
+  background-color: var(--black-colour);
+  color: var(--secondary-header-text-color);;
+}
+/* flex flex-col gap-[1rem] */
+
+.veractDetailsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.socialMediaSection {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.scaleTransition {
+  transition: all 0.3s ease;
+}
+
+.scaleTransition:hover {
+  transform: scale(110%);
+  cursor: pointer;
+}
+.footerFont {
+  font-size: 14px;
+  color: var(--secondary-header-text-color);
+  font-weight: 500;
+}
+
+.officeDetailsSection {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.officeDetailsInnerSection {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.contactNo {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
